tests/error/double_move.bz
function test()
{
	let i = 0;
	move i + move i;
}
